--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: #34495e;
+  background: linear-gradient(calc(var(--s)*45deg), transparent calc(50% - 1px), #4B384C 0, #4B384C calc(50% + 1px), transparent 0) 0 0/ 0.5em 0.5em;
 }
 .box {
   width: 300px;
